@@ -1,4 +1,5 @@
 
+  o why3config --conf_file is replaced by -C and --config
   o TPTP : encoding is not anymore the default for tptp provers.
   It is now forbidden to use explicit with enumeration.
   o [IDE] source file names are stored in database as relative paths
